--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -19,7 +19,10 @@
               <button type="button" class="btn btn-default promotes-count"><span class="promotes-count">{{ ad.promoteesCount }}</span></button>
             </div>
           {% else %}
-            <a class="btn btn-default btn-sm">{{ ad.promoteesCount }} promotes</a>
+            <div class="btn-group btn-group-sm">
+              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote"><span class="icon-bullhorn"></span> Unpromote</a>
+              <button type="button" class="btn btn-default promotes-count"><span class="promotes-count">{{ ad.promoteesCount }}</span></button>
+            </div>
           {% endif %}
 
           {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
@@ -82,10 +85,14 @@
 
         <div class="panel-body">
           <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}" class="btn btn-default btn-block" style="margin-bottom: 10px;">more ads</a>
-          {% if app.user and app.user != user %}
-            {% set hasFollow = app.user.hasFollowUser(user) %}
-            <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow follow-user {% if hasFollow %}hide{% endif %}">Follow</a>
-            <a href="{{ path('adstacy_app_user_unfollow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow unfollow-user {% if not hasFollow %}hide{% endif %}">Unfollow</a>
+          {% if app.user %}
+            {% if app.user != user %}
+              {% set hasFollow = app.user.hasFollowUser(user) %}
+              <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow follow-user {% if hasFollow %}hide{% endif %}">Follow</a>
+              <a href="{{ path('adstacy_app_user_unfollow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow unfollow-user {% if not hasFollow %}hide{% endif %}">Unfollow</a>
+            {% endif %}
+          {% else %}
+              <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow">Follow</a>
           {% endif %}
         </div>
       </div>
