--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -36,10 +36,14 @@
             <a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
             <a href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
             <div class="follow-action">
-              {% if app.user and app.user != user %}
-                {% set followed = app.user.hasFollowUser(user) %}
-                <a class="btn btn-primary btn-follow btn-sm unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a>
-                <a class="btn btn-primary btn-follow btn-sm follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
+              {% if app.user %}
+                {% if app.user != user %}
+                  {% set followed = app.user.hasFollowUser(user) %}
+                  <a class="btn btn-primary btn-follow btn-sm unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a>
+                  <a class="btn btn-primary btn-follow btn-sm follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
+                {% endif %}
+              {% else %}
+                <a class="btn btn-primary btn-follow btn-sm" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
               {% endif %}
             </div>
           </div>
