Fix user javascripts.

--- a/src/Adstacy/AppBundle/Resources/public/less/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/user.less
@@ -1,4 +1,4 @@
-#search-user-thumb {
+.user {
   width: 236px;
   height: 218px;
   margin: 14px 7px 0 7px;
@@ -64,7 +64,7 @@
       width: 130px;
     }
   }
-  .user {
+  .user-desc {
     float: left;
     width: 342px;
   }
