--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -9,7 +9,7 @@
             <div class="profile-picture">
               <img src="{{ profile_pic(user) }}">
             </div>
-            <div class="user">
+            <div class="user-desc">
               <div class="user-info">
                 <h1 class="user-info-realname">
                   <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="user-info-menu">
-            <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}"><span class="user-followers-count">{{ adsCount }}</span> Ads</a>
+            <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">{{ adsCount }} Ads</a>
             <a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
             <a href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
             <div class="follow-action">
@@ -81,6 +81,7 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
+      $('#user-profile').ajaxlink('follow_single');
       $('.jscroll').jscroll({
         nextSelector: 'a.next-page',
         callback: function(a, b) {
