Change Tags Selection to Popular Tags.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -48,7 +48,7 @@
               <div class="dropdown-menu" role="menu">
                 <div class="clearfix">
                   <ul id="tags-dropdown" class="list-inline list-unstyled">
-                    <li class="heading">Tags Selection</li>
+                    <li class="heading">POPULAR TAGS</li>
                     <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'jual'}) }}" title="Jual">Jual</a></li>
                     <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'beli'}) }}" title="Beli">Beli</a></li>
                     <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'loker'}) }}" title="Lowongan Kerja">Lowongan Kerja</a></li>
@@ -107,7 +107,7 @@
             <li><a href="{{ path('homepage') }}" title="Home"><span class="icon-home"></span>&nbsp; Home</a></li>
             <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
             <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
-            <li><a href="#" title="Trending"><span class="icon-bookmark"></span>&nbsp; Browse Tags Selection</a></li>
+            <li><a href="#" title="Trending"><span class="icon-bookmark"></span>&nbsp; Popular Tags</a></li>
             <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><span class="icon-user"></span>&nbsp; {{"profile"|trans}}</a></li>
             <li><a href="{{ path('fos_user_profile_edit') }}"><span class="icon-gear"></span>&nbsp; {{"settings"|trans}}</a></li>
             <li><a href="{{ path('fos_user_security_logout') }}"><span class="icon-off"></span>&nbsp; {{"logout"|trans}}</a></li>
