--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -11,6 +11,9 @@ body {
 }
 
 .panel {
+  border: 1px solid #ccc;
+  border-bottom: 0;
+  box-shadow: 0 1px 1px #aaa;
   margin-left: auto;
   margin-right: auto;
 }
