Add hastag hint at popular tags.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -49,12 +49,12 @@
                 <div class="clearfix">
                   <ul id="tags-dropdown" class="list-inline list-unstyled">
                     <li class="heading">POPULAR TAGS</li>
-                    <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'jual'}) }}" title="Jual">Jual</a></li>
-                    <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'beli'}) }}" title="Beli">Beli</a></li>
-                    <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'loker'}) }}" title="Lowongan Kerja">Lowongan Kerja</a></li>
-                    <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'promo'}) }}" title="Promo">Promo</a></li>
-                    <li class="hot-category"><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event</a></li>
-                    <li><a href="{{ path('adstacy_app_search', {q: 'rumah'}) }}" title="Rumah">Rumah</a></li>
+                    <li><a href="{{ path('adstacy_app_search', {q: 'jual'}) }}" title="Jual">Jual<small>#jual</small></a></li>
+                    <li><a href="{{ path('adstacy_app_search', {q: 'beli'}) }}" title="Beli">Beli<small>#beli</small></a></li>
+                    <li><a href="{{ path('adstacy_app_search', {q: 'loker'}) }}" title="Lowongan Kerja">Lowongan Kerja<small>#lowker</small></a></li>
+                    <li><a href="{{ path('adstacy_app_search', {q: 'promo'}) }}" title="Promo">Promo<small>#promo</small></a></li>
+                    <li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event<small>#event</small></a></li>
+                    <li><a href="{{ path('adstacy_app_search', {q: 'property'}) }}" title="Property">Rumah<small>#property</small></a></li>
                   </ul>
                   <ul id="user-dropdown-menu" class="list-unstyled">
                     <li><a href="{{ path('homepage') }}" title="Home"><span class="icon-home"></span>&nbsp; Home</a></li>
