--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -107,12 +107,15 @@ span.required {
   margin: 0;
   min-height: 200px;
   width: 340px;
+
+  li {
+    margin-bottom: 10px;
+  }
   
   a {
     color: #333;
     display: inline-block;
     font-size: 13px;
-    margin-bottom: 10px;
     padding: 2px 10px;
     width: 130px;
     &:hover {
@@ -132,6 +135,13 @@ span.required {
     font-weight: bold;
     margin-bottom: 10px;
     padding-left: 15px;
+  }
+
+  small {
+    color: #aaa;
+    display: block;
+    font-size: 11px;
+    margin-top: -3px;
   }
 }
 
