fix jumbotron message box text color.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -109,7 +109,6 @@ span.required {
   li {
     margin-bottom: 10px;
   }
-  
   a {
     color: #333;
     display: inline-block;
@@ -184,7 +183,7 @@ span.required {
 #error-page {
   margin-top: 50px;
   text-align: center;
-  color: #fff;
+  color: @gray-dark;
   h2 {
     font-size: 6em;
     margin-bottom: 30px;
@@ -248,10 +247,10 @@ span.required {
     }
   }
 
-  // Adjust Components 
-  #search-container, 
+  // Adjust Components
+  #search-container,
   #search-box {
-    width: 100% !important;  
+    width: 100% !important;
   }
   #register-btn-link {
     display: block;
