--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -5,7 +5,5 @@
 @input-border-focus: #bbb;
 @navbar-default-brand-color: @brand-primary;
 @navbar-default-brand-hover-color: darken(@navbar-default-brand-color, 10%);
-@jumbotron-color: #fff;
+@jumbotron-color: #333;
 @jumbotron-bg: transparent;
-
-@state-success-bg: #fff;
