style jscroll next-page btn.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -267,3 +267,11 @@ span.required {
     margin-right: 0;
   }
 }
+
+.next-page {
+  position: absolute;
+  bottom: -50px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: 0;
+}
