--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -101,11 +101,9 @@ span.required {
 }
 
 #tags-dropdown {
-  border-right: 1px solid #ddd;
   float: left;
-  padding: 10px 15px;
   margin: 0;
-  min-height: 200px;
+  padding: 10px;
   width: 340px;
 
   li {
@@ -147,9 +145,11 @@ span.required {
 
 #user-dropdown-menu {
   background-color: #f4f4f4;
-  float: left;
+  border-left: 1px solid #ddd;
+  float: right;
   margin: 0;
-  padding: 10px;
+  min-height: 200px;
+  padding: 10px 15px;
   width: 140px;
 
   li {
