style reset verification form.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/form.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/form.less
@@ -72,3 +72,26 @@
   width: 500px;
   margin: 150px auto;
 }
+
+#reset-verification-container {
+  width: 750px;
+  margin: 100px auto;
+
+  .control-label, .control-widget {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .control-label {
+    width: 174px;
+  }
+
+  .control-widget {
+    width: 574px;
+  }
+
+  .offset-control-label {
+    margin-left: 174px;
+  }
+}
