add signup social btn on register page.

--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -16,6 +16,14 @@
       <h1>{{ "form_registration.title"|trans }}</h1>
     </div>
 
+    <div class="panel-body">
+      {% for owner in hwi_oauth_resource_owners() %}
+        <a class="btn btn-block btn-lg btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">Signup with {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
+      {% endfor %}
+    </div>
+
+    <hr>
+
     {{ form_start(form, {attr: {class: 'panel-body', role: 'form'} }) }}
       {{ form_errors(form) }}
 
