--- a/src/Adstacy/AppBundle/Resources/public/less/base/form.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/form.less
@@ -1,9 +1,4 @@
-#register-container {
-  margin: 60px auto;
-  width: 500px;
-}
-
-#login-container {
+#register-container, #login-container {
   margin: 60px auto;
   width: 500px;
 
@@ -43,6 +38,7 @@
 }
 
 #contactus-container {
+  margin: 80px auto;
   width: 750px;
 
   .control-label, .control-widget {
