fix register form margin.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/form.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/form.less
@@ -1,5 +1,8 @@
-#register-container, #login-container {
+#login-container {
   margin: 60px auto;
+}
+
+#register-container, #login-container {
   width: 500px;
 
   hr {
