--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -133,7 +133,7 @@
   <script type="text/javascript">
     $(function() {
       $('#ad-detail-container').ajaxlink('promote_single');
-      $('#ad-detail-sidebar').ajaxlink('follow_user');
+      $('#ad-detail-sidebar').ajaxlink('follow_single');
     });
   </script>
 {% endblock %}
