--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -14,6 +14,35 @@
       </div>
 
       <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <div id="browse-btn" class="btn-group navbar-btn pull-left">
+          <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            <span class="icon-angle-down icon-angle-up"></span>
+          </button>
+          <div id="browse-dropdown" class="dropdown-menu" role="menu">
+            <div class="clearfix">
+              <ul id="browse-dropdown-menu" class="list-unstyled">
+                <li><a href="{{ path('homepage') }}" title="Explore"><span class="icon-home"></span>&nbsp; Explore</a></li>
+                <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
+                <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
+              </ul>
+              <ul id="tags-dropdown" class="list-inline list-unstyled">
+                <li class="heading">POPULAR TAGS</li>
+                <li><a href="{{ path('adstacy_app_search', {q: 'jual'}) }}" title="Jual">Jual<small>#jual</small></a></li>
+                <li><a href="{{ path('adstacy_app_search', {q: 'beli'}) }}" title="Beli">Beli<small>#beli</small></a></li>
+                <li><a href="{{ path('adstacy_app_search', {q: 'loker'}) }}" title="Lowongan Kerja">Lowongan Kerja<small>#lowker</small></a></li>
+                <li><a href="{{ path('adstacy_app_search', {q: 'promo'}) }}" title="Promo">Promo<small>#promo</small></a></li>
+                <li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event<small>#event</small></a></li>
+                <li><a href="{{ path('adstacy_app_search', {q: 'property'}) }}" title="Property">Rumah<small>#property</small></a></li>
+              </ul>
+            </div>
+            <ul id="footer" class="list-inline list-unstyled">
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
+            </ul>
+          </div>
+        </div>
         <form id="form-search" action="{{ path('adstacy_app_search') }}" class="navbar-form navbar-left" role="search">
           {% set isSearchUser = app.request.attributes.get('_route') == 'adstacy_app_search' and app.request.query.get('type') == 'users' %}
           <div id="search-container" class="input-group">
@@ -45,33 +74,11 @@
                 <img class="mini-profpic" src="{{ profile_pic(app.user) }}" alt="{{ app.user.username }}">
                 <span class="username-label">{{ app.user.username }}</span>
               </button>
-              <div class="dropdown-menu" role="menu">
-                <div class="clearfix">
-                  <ul id="tags-dropdown" class="list-inline list-unstyled">
-                    <li class="heading">POPULAR TAGS</li>
-                    <li><a href="{{ path('adstacy_app_search', {q: 'jual'}) }}" title="Jual">Jual<small>#jual</small></a></li>
-                    <li><a href="{{ path('adstacy_app_search', {q: 'beli'}) }}" title="Beli">Beli<small>#beli</small></a></li>
-                    <li><a href="{{ path('adstacy_app_search', {q: 'loker'}) }}" title="Lowongan Kerja">Lowongan Kerja<small>#lowker</small></a></li>
-                    <li><a href="{{ path('adstacy_app_search', {q: 'promo'}) }}" title="Promo">Promo<small>#promo</small></a></li>
-                    <li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event<small>#event</small></a></li>
-                    <li><a href="{{ path('adstacy_app_search', {q: 'property'}) }}" title="Property">Rumah<small>#property</small></a></li>
-                  </ul>
-                  <ul id="user-dropdown-menu" class="list-unstyled">
-                    <li><a href="{{ path('homepage') }}" title="Home"><span class="icon-home"></span>&nbsp; Home</a></li>
-                    <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
-                    <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
-                    <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><span class="icon-user"></span>&nbsp; {{"profile"|trans}}</a></li>
-                    <li><a href="{{ path('fos_user_profile_edit') }}"><span class="icon-gear"></span>&nbsp; {{"settings"|trans}}</a></li>
-                    <li><a href="{{ path('fos_user_security_logout') }}"><span class="icon-off"></span>&nbsp; {{"logout"|trans}}</a></li>
-                  </ul>
-                </div>
-                <ul id="footer" class="list-inline list-unstyled">
-                  <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
-                  <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
-                  <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
-                  <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
-                </ul>
-              </div>
+              <ul id="user-dropdown-menu" class="dropdown-menu" role="menu">
+                <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><span class="icon-user"></span>&nbsp; {{"profile"|trans}}</a></li>
+                <li><a href="{{ path('fos_user_profile_edit') }}"><span class="icon-gear"></span>&nbsp; {{"settings"|trans}}</a></li>
+                <li><a href="{{ path('fos_user_security_logout') }}"><span class="icon-off"></span>&nbsp; {{"logout"|trans}}</a></li>
+              </ul>
             </div>
           {% else %}
             <a id="register-btn-link" href="{{ path('fos_user_registration_register') }}" class="btn btn-success navbar-btn">{{"register"|trans}}</a>
@@ -102,17 +109,17 @@
             </div>
           {% endif %}
         </div>
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-          <ul id="user-dropdown-mobile" class="nav navbar-nav navbar-right">
-            <li><a href="{{ path('homepage') }}" title="Home"><span class="icon-home"></span>&nbsp; Home</a></li>
-            <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
-            <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
-            <li><a href="#" title="Trending"><span class="icon-bookmark"></span>&nbsp; Popular Tags</a></li>
-            <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><span class="icon-user"></span>&nbsp; {{"profile"|trans}}</a></li>
-            <li><a href="{{ path('fos_user_profile_edit') }}"><span class="icon-gear"></span>&nbsp; {{"settings"|trans}}</a></li>
-            <li><a href="{{ path('fos_user_security_logout') }}"><span class="icon-off"></span>&nbsp; {{"logout"|trans}}</a></li>
-          </ul>
-        {% endif %}
+        <ul id="user-dropdown-mobile" class="nav navbar-nav navbar-right">
+          <li><a href="{{ path('homepage') }}" title="Home"><span class="icon-home"></span>&nbsp; Home</a></li>
+          <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><span class="icon-rocket"></span>&nbsp; Trending</a></li>
+          <li><a href="#" title="Trending"><span class="icon-bookmark"></span>&nbsp; Popular Tags</a></li>
+          {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+          <li><a href="{{ path('adstacy_app_stream') }}"><span class="icon-rss"></span>&nbsp; {{"stream"|trans}}</a></li>
+          <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><span class="icon-user"></span>&nbsp; {{"profile"|trans}}</a></li>
+          <li><a href="{{ path('fos_user_profile_edit') }}"><span class="icon-gear"></span>&nbsp; {{"settings"|trans}}</a></li>
+          <li><a href="{{ path('fos_user_security_logout') }}"><span class="icon-off"></span>&nbsp; {{"logout"|trans}}</a></li>
+          {% endif %}
+        </ul>
       </div>
     </div>
   </nav>
