--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -85,13 +85,12 @@ span.required {
 }
 
 #browse-dropdown-menu {
-  float: left;
+  border-bottom: 1px solid #ddd;
   margin: 0;
-  padding: 10px 10px;
-  width: 140px;
+  padding: 10px 15px;
 
   li {
-    margin-bottom: 10px;
+    margin-right: 20px;
 
     a {
       color: #999;
@@ -108,11 +107,8 @@ span.required {
 
 #tags-dropdown {
   background-color: #fff;
-  border-left: 1px solid #d8d8d8;
-  float: right;
   margin: 0;
   padding: 10px;
-  width: 450px;
 
   li {
     margin-bottom: 10px;
@@ -142,7 +138,7 @@ span.required {
   }
 
   small {
-    color: #aaa;
+    color: #bbb;
     display: block;
     font-size: 11px;
     margin-top: -3px;
@@ -156,6 +152,9 @@ span.required {
   margin: 0;
   padding: 5px 10px;
 
+  li {
+    margin-right: 15px;
+  }
   a {
     color: #888;
     font-size: 12px;
