Change browse menu color.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -87,19 +87,19 @@ span.required {
 #browse-dropdown-menu {
   border-bottom: 1px solid #ddd;
   margin: 0;
-  padding: 10px 15px;
+  padding: 10px 20px;
 
   li {
     margin-right: 20px;
 
     a {
-      color: #999;
+      color: @brand-primary;
       display: block;
     }
 
     a:hover {
       background-color: transparent;
-      color: #b00;
+      color: darken(@brand-primary, 15%);
       text-decoration: none;
     }
   }
